Anotation-based authorization and testing